# urc-code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basic_publisher.cpp  basic_subscriber.cpp  install.sh  laser_scan.cpp  laser_scan.py  logo.txt  packages.csv  uninstall.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: buildros.yml  buildrosnoetic.yml
arm/: CMakeLists.txt  README.md  setup.py
arm/nodes/: sdrc_arm_v1
arm/src/sdrc_arm_v1/: arm_control.py
biology/: README.md
buildold/: CMakeCache.txt  CTestTestfile.cmake  Makefile  catkin_make.cache  cmake_install.cmake
buildold/atomic_configure/: .rosinstall
buildold/catkin_generated/: generate_cached_setup.py  order_packages.py  setup_cached.sh
buildold/catkin_generated/installspace/: .rosinstall
buildold/gtest/: CTestTestfile.cmake  Makefile
buildold/image_processing/: CTestTestfile.cmake  Makefile
buildold/image_processing/catkin_generated/: pkg.installspace.context.pc.py
buildold/image_processing/catkin_generated/installspace/: image_processing.pc  image_processingConfig.cmake
chassis/: CMakeLists.txt  README.md  package.xml
chassis/include/: Configuration.h  chassis.h
chassis/src/: chassis.cpp  chassis_control.cpp  chassis_create_cmd_vel.cpp  control.launch  create_cmd_vel.launch  teleop.cpp  teleop.launch  teleop_inverted.cpp  teleop_inverted.launch
comms/: README.md
comms/brandon_testing/: CMakeLists.txt  package.xml
comms/brandon_testing/launch/: bondtest.launch  connection_time.launch  heartbeat.launch
comms/brandon_testing/src/: bondtestmaster.cpp  bondtestslave.cpp  connection_status.cpp  heartbeat_test.cpp  robot_activity_test.cpp  time.cpp  timediff.cpp
control/: README.md
control/image_processing/depreciated/: ball_tracker_node.py
control/image_processing/src/: alvartest.launch  detect_original_aruco_tag.cpp  img_subscriber.cpp
control/joystick_handler/: CMakeLists.txt  README.md  joystick_handler.launch  joystick_handler_flight.launch  joystick_handler_flight_sim.launch  joystick_handler_flight_turtle.launch  joystick_handler_turtle.launch  package.xml
control/joystick_handler/include/: Configuration.h
control/joystick_handler/src/: joystick_handler.cpp
control/led/: CMakeLists.txt  package.xml
control/lidar/: README.md
control/lidar/rplidar_pkg/: CMakeLists.txt  package.xml
control/lidar/rplidar_pkg/launch/: sample_scan.launch
control/lidar/rplidar_pkg/rviz/: rplidar.rviz
control/navigation/: CMakeLists.txt  package.xml
control/raspberry_pi/: autostart
devel/: _setup_util.py
devel/lib/image_processing/: img_publisher  img_publisher_test  img_subscriber  roscpp_opencv_example
devel/lib/pkgconfig/: image_processing.pc
develold/: .catkin
develold/lib/image_processing/: img_publisher  img_publisher_test
drive/: CMakeLists.txt  README  README.md  package.xml
drive/include/: chassis.h  path.h  waypoint.h
drive/msg/: velocity.msg
drive/src/: chassis.cpp  teleop.cpp  teleop.launch
drive_rover/: CMakeLists.txt  package.xml
drive_rover/include/: chassis.h
drive_rover/src/: teleop.launch
examples/led/: CMakeLists.txt  package.xml
examples/led/srv/: AddTwoInts.srv
extras/Esp32HelloWorldPubWithCamera/: Esp32HelloWorldPubWithCamera.ino
extras/arduino-sample/: CMakeLists.txt  README.md  package.xml
image_processing/: README.md  package.xml
image_processing/src/: img_publisher.cpp  roscpp_opencv.cpp
learning_joy/: CMakeLists.txt  README.md  package.xml  turtle_joy.launch
learning_joy/src/: joystick_handler.cpp  turtle_teleop_joy.cpp
lidar/: CMakeLists.txt  package.xml
lidar/src/: lidar_scan.cpp
rplidar_ros/launch/: sample_scan.launch
sdrc_arm_v1/: package.xml
sdrc_arm_v1/launch/: arm.launch
sdrc_urc/: CMakeLists.txt  package.xml
sdrc_urc_arm/: CMakeLists.txt  package.xml
sdrc_urc_biology/: CMakeLists.txt  package.xml
sdrc_urc_bringup/: CMakeLists.txt  package.xml
sdrc_urc_chassis/: CMakeLists.txt  package.xml
sdrc_urc_chassis/scripts/: teleop.py
sdrc_urc_comms/: CMakeLists.txt  package.xml
sdrc_urc_cv/: CMakeLists.txt  README.md  package.xml
sdrc_urc_description/: CMakeLists.txt  package.xml
sdrc_urc_examples/: CMakeLists.txt  package.xml
sdrc_urc_examples/launch/: dijkstras.launch
sdrc_urc_gazebo/: CMakeLists.txt  package.xml
sdrc_urc_gps/: CMakeLists.txt  package.xml
sdrc_urc_gui/: CMakeLists.txt  package.xml
sdrc_urc_jetson_nano/: CMakeLists.txt  package.xml
sdrc_urc_joystick/: CMakeLists.txt  README.md  package.xml
sdrc_urc_joystick/launch/: joystick_handler.launch  joystick_handler_sim.launch  joystick_handler_turtle.launch
sdrc_urc_joystick/src/: joystick_handler.cpp
sdrc_urc_led/: CMakeLists.txt  package.xml
sdrc_urc_led/scripts/: server.py
sdrc_urc_lidar/: CMakeLists.txt  README.md  package.xml
sdrc_urc_mapping/: CMakeLists.txt  package.xml
sdrc_urc_mapping/maps/: house.pgm  house.yaml
sdrc_urc_navigation/: CMakeLists.txt  package.xml
sdrc_urc_navigation/launch/: dijkstras.launch
sdrc_urc_navigation/scripts/: setNavGoal.py
sdrc_urc_pi/: CMakeLists.txt  package.xml
sdrc_urc_zed2/: CMakeLists.txt  package.xml
sim/: README.md
sim/BasicRover/: CMakeLists.txt  package.xml
sim/BasicRover/config/: joint_names_BasicRover.yaml
sim/BasicRover/launch/: display.launch  gazebo.launch
sim/BasicRover/meshes/: Wheel1.STL  Wheel2.STL  Wheel3.STL  Wheel5.STL  base_link.STL
sim/BasicRover/urdf/: BasicRover.urdf  basicRover.csv
sim/mapping/: CMakeLists.txt  load_map.launch  package.xml
sim/mapping/maps/: README.md
sim/mapping/rviz/: map_config.rviz
src/drive_base/: BREADCRUMBS.md  CMakeLists.txt  package.xml
src/drive_base/include/: Constants.h  Macros.h
src/drive_base/src/: RoboteqDevice.cpp  roboteq_command_server.cpp  roboteq_diff_drive.cpp
src/drive_base/srv/: RoboteqCommand.srv
src/image_processing/: CMakeLists.txt
src/image_processing/src/: alvartest2.launch  img_publisherold.cpp  img_subscriberold.cpp  roscpp_opencv.cpp  usbcam.launch
testcode/GUI/: GUI.cpp
(+4 files in other folders)
