<?xml version="1.0"?>
<package format="2">
  <name>sdrc_urc_bringup</name>
  <version>0.1.0</version>
  <description>The sdrc_urc_bringup package contains the main set of programs to
  start the rover, gui, and simulation.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bjrice13@gmail.com">Brandon Rice</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://sdrc.engineering.asu.edu/</url>
  <url type="repository">https://github.com/sundevilrobotics/</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="bjrice13@gmail.com">Brandon Rice</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sdrc_urc_arm</build_depend>
  <build_depend>sdrc_urc_biology</build_depend>
  <build_depend>sdrc_urc_chassis</build_depend>
  <build_depend>sdrc_urc_comms</build_depend>
  <build_depend>sdrc_urc_cv</build_depend>
  <build_depend>sdrc_urc_description</build_depend>
  <build_depend>sdrc_urc_gazebo</build_depend>
  <build_depend>sdrc_urc_gps</build_depend>
  <build_depend>sdrc_urc_gui</build_depend>
  <build_depend>sdrc_urc_jetson_nano</build_depend>
  <build_depend>sdrc_urc_joystick</build_depend>
  <build_depend>sdrc_urc_lidar</build_depend>
  <build_depend>sdrc_urc_mapping</build_depend>
  <build_depend>sdrc_urc_navigation</build_depend>
  <build_depend>sdrc_urc_pi</build_depend>
  <build_depend>sdrc_urc_zed2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sdrc_urc_arm</build_export_depend>
  <build_export_depend>sdrc_urc_biology</build_export_depend>
  <build_export_depend>sdrc_urc_chassis</build_export_depend>
  <build_export_depend>sdrc_urc_comms</build_export_depend>
  <build_export_depend>sdrc_urc_cv</build_export_depend>
  <build_export_depend>sdrc_urc_description</build_export_depend>
  <build_export_depend>sdrc_urc_gazebo</build_export_depend>
  <build_export_depend>sdrc_urc_gps</build_export_depend>
  <build_export_depend>sdrc_urc_gui</build_export_depend>
  <build_export_depend>sdrc_urc_jetson_nano</build_export_depend>
  <build_export_depend>sdrc_urc_joystick</build_export_depend>
  <build_export_depend>sdrc_urc_lidar</build_export_depend>
  <build_export_depend>sdrc_urc_mapping</build_export_depend>
  <build_export_depend>sdrc_urc_navigation</build_export_depend>
  <build_export_depend>sdrc_urc_pi</build_export_depend>
  <build_export_depend>sdrc_urc_zed2</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sdrc_urc_arm</exec_depend>
  <exec_depend>sdrc_urc_biology</exec_depend>
  <exec_depend>sdrc_urc_chassis</exec_depend>
  <exec_depend>sdrc_urc_comms</exec_depend>
  <exec_depend>sdrc_urc_cv</exec_depend>
  <exec_depend>sdrc_urc_description</exec_depend>
  <exec_depend>sdrc_urc_gazebo</exec_depend>
  <exec_depend>sdrc_urc_gps</exec_depend>
  <exec_depend>sdrc_urc_gui</exec_depend>
  <exec_depend>sdrc_urc_jetson_nano</exec_depend>
  <exec_depend>sdrc_urc_joystick</exec_depend>
  <exec_depend>sdrc_urc_lidar</exec_depend>
  <exec_depend>sdrc_urc_mapping</exec_depend>
  <exec_depend>sdrc_urc_navigation</exec_depend>
  <exec_depend>sdrc_urc_pi</exec_depend>
  <exec_depend>sdrc_urc_zed2</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
